# cs50-assignments

./: .gitignore  README.md  pyproject.toml
.github/workflows/: unittests.yaml
cs50_assignments/knowledge/knights/: README.md  logic.py  puzzle.py
cs50_assignments/knowledge/minesweeper/: README.md  minesweeper.py  runner.py
cs50_assignments/language/attention/: README.md  mask.py
cs50_assignments/language/parser/: README.md  parser.py
cs50_assignments/learning/nim/: README.md  nim.py  play.py
cs50_assignments/learning/shopping/: README.md  shopping.py
cs50_assignments/neural_networks/traffic/: README.md  traffic.py
cs50_assignments/optimization/crossword/: README.md  generate.py
cs50_assignments/search/degrees/: README.md  degrees.py
cs50_assignments/search/tictactoe/: runner.py  tictactoe.py
cs50_assignments/uncertainty/heredity/: README.md  heredity.py
cs50_assignments/uncertainty/pagerank/: README.md  pagerank.py
tests/knowledge/minesweeper/: test_minesweeper.py
tests/learning/nim/: test_nim.py
tests/learning/shopping/: test_shopping.py
tests/learning/shopping/test_data/: valid.csv
tests/optimization/crossword/: conftest.py  test_generate.py
tests/search/degrees/: conftest.py  test_shortest_path.py
tests/search/degrees/test_data/: people.csv  stars.csv
tests/search/tictactoe/: test_tictactoe.py
tests/uncertainty/heredity/: test_heredity.py
tests/uncertainty/pagerank/: test_pagerank.py
